<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00ffff"
    tools:context=".simulator">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="312dp"
        android:layout_height="282dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.947">

        <Button
            android:id="@+id/answer_nine"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginStart="4dp"
            android:backgroundTint="@color/background_selector"
            android:onClick="answer"
            android:text="9"
            android:textColor="@color/color_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/answer_eight"
            app:layout_constraintTop_toBottomOf="@+id/answer_six"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/answer_eight"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginStart="4dp"
            android:backgroundTint="@color/background_selector"
            android:onClick="answer"
            android:text="8"
            android:textColor="@color/color_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/answer_seven"
            app:layout_constraintTop_toBottomOf="@+id/answer_five"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/answer_seven"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginStart="0dp"
            android:backgroundTint="@color/background_selector"
            android:onClick="answer"
            android:text="7"
            android:textColor="@color/color_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/answer_four"
            app:layout_constraintVertical_bias="0.025" />

        <Button
            android:id="@+id/answer_five"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/background_selector"
            android:onClick="answer"
            android:text="5"
            android:textColor="@color/color_selector"
            app:layout_constraintStart_toEndOf="@+id/answer_four"
            app:layout_constraintTop_toBottomOf="@+id/answer_two" />

        <Button
            android:id="@+id/answer_six"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/background_selector"
            android:onClick="answer"
            android:text="6"
            android:textColor="@color/color_selector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/answer_five"
            app:layout_constraintTop_toBottomOf="@+id/answer_three" />

        <Button
            android:id="@+id/answer_four"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/background_selector"
            android:onClick="answer"
            android:text="4"
            android:textColor="@color/color_selector"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/answer_one" />

        <Button
            android:id="@+id/answer_one"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginStart="0dp"
            android:backgroundTint="@color/background_selector"
            android:onClick="answer"
            android:text="1"
            android:textColor="@color/color_selector"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/answer_two"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginStart="4dp"
            android:backgroundTint="@color/background_selector"
            android:onClick="answer"
            android:text="2"
            android:textColor="@color/color_selector"
            app:layout_constraintStart_toEndOf="@+id/answer_one"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/answer_three"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginStart="4dp"
            android:backgroundTint="@color/background_selector"
            android:onClick="answer"
            android:text="3"
            android:textColor="@color/color_selector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/answer_two"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/answer_zero"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/background_selector"
            android:onClick="answer"
            android:text="0"
            android:textColor="@color/color_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.906"
            app:layout_constraintStart_toEndOf="@+id/answer_no"
            app:layout_constraintTop_toBottomOf="@+id/answer_nine"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/answer_no"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/background_selector"
            android:onClick="answer"
            android:text="@string/answer_no"
            android:textColor="@color/color_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/answer_seven"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="73dp"
        android:layout_height="160dp"
        android:backgroundTint="@color/background_selector"
        android:onClick="back"
        android:text="@string/back"
        android:textColor="@color/color_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.037" />

    <Button
        android:id="@+id/button3"
        android:layout_width="72dp"
        android:layout_height="103dp"
        android:backgroundTint="@color/background_selector"
        android:onClick="saveTemporarily"
        android:text="@string/save"
        android:textColor="@color/color_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestionNo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvQuestionNo"
        android:layout_width="86dp"
        android:layout_height="29dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="245dp"
        android:layout_height="325dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@color/white" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="0dp"
            app:layout_constraintStart_toEndOf="@+id/imageView1"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@color/white" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@color/white" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView1"
            tools:srcCompat="@color/white" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            tools:srcCompat="@color/white" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            tools:srcCompat="@color/white" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            tools:srcCompat="@color/white" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            tools:srcCompat="@color/white" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            tools:srcCompat="@color/white" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7"
            tools:srcCompat="@color/white" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toBottomOf="@+id/imageView8"
            tools:srcCompat="@color/white" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="82dp"
            android:layout_height="85dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView11"
            app:layout_constraintTop_toBottomOf="@+id/imageView9"
            tools:srcCompat="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>